[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/crystals/pink/pink_crystal_0001.png" type="Texture" id=1]
[ext_resource path="res://abilities/projectileToCursorDir/projectileToCursorDir.gd" type="Script" id=2]
[ext_resource path="res://attacks/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 4.00001

[node name="ProjectileToCursorDir" groups=["Player", "Projectile"] instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 1 )
collision_layer = 256
collision_mask = 65
script = ExtResource( 2 )
distanceModifier = 0.003
knockbackModifier = 130

[node name="Sprite" type="Sprite" parent="." index="0"]
rotation = 1.5708
scale = Vector2( 0.5, 0.248038 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
show_behind_parent = true
position = Vector2( -1, -1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]
show_behind_parent = true
position = Vector2( -0.5, -0.5 )
scale = Vector2( 0.65, 0.55 )

[connection signal="area_entered" from="." to="." method="_on_ProjectileToCursorDir_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_ProjectileToCursorDir_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
